[gd_scene load_steps=9 format=3 uid="uid://dgiv2voq1rpid"]

[ext_resource type="Texture2D" uid="uid://cf47qgfqba22h" path="res://assets/sprites/slime_green.png" id="1_s2u4l"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_srfj7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pa5do"]
atlas = ExtResource("1_s2u4l")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uevjl"]
atlas = ExtResource("1_s2u4l")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhw0b"]
atlas = ExtResource("1_s2u4l")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4oic"]
atlas = ExtResource("1_s2u4l")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_p1uiv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa5do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uevjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhw0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4oic")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya6cg"]
size = Vector2(8, 12)

[node name="slime" type="Node2D"]
script = ExtResource("1_srfj7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_p1uiv")
autoplay = "default"
frame_progress = 0.508223

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_ya6cg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
